# full_stack_database_management_system

./: notes.text  pyproject.toml  t3_billing_km.csv  t3_billing_zone.csv  tree.py  tree.txt
client/: eslint.config.js  login.html
client/src/: App.jsx  Dashboard.css  Dashboard.jsx  Downloads.jsx  Footer.jsx  GPSChecker.jsx  LocalityChecker.css  LocalityChecker.jsx  LocalityChecker2.jsx  VehicleList.jsx
client/src/App/: App.jsx
server/: Untitled-1.sql  debug_script.py  localhost.session.sql  pyproject.toml
server/1notebooks/: address_uploding.ipynb
server/config/: settings.py  urls.py  views.py
server/tracker/: admin.py  models.py  urls.py  views.py
server/tracker/migrations/: 0001_initial.py  0002_remove_misreport_month_name_and_more.py  0003_t3billingkm_t3locality_t3addresslocality.py  0004_t3billingzone_vehiclelist_alter_t3billingkm_options_and_more.py
